# pms-ai-selection

./: .dockerignore  .env.dev.example  .env.example  .env.local.example  .env.prod.example  .env.test.example  .env.windows.local.example  .env.wsl.example  .gitignore  2026042301ERP项目开发任务清单-验收标准.md  AGENTS.md  Dockerfile  LICENSE  README-en.md  README.md  alembic.ini  docker-compose.app-only.yml  docker-compose.dev.yml  docker-compose.local-kafka.yml  docker-compose.local-llm.yml  docker-compose.prod.yml  docker-compose.wsl-local.yml  docker-compose.wsl-platform.yml  docker-compose.wsl-postgres-ha.yml  docker-compose.wsl-qdrant-cluster.yml  docker-compose.yml  fix_async.py  mypy.ini  pyproject.toml  requirements.txt  scrapy.cfg  test_qdrant_verification.py  下一步项目方案与计划.md  交叉验证ERP与PMS详细设计交互问题和优化建议.md  差异分析与优化建议.md  快速启动指南.md  文档索引.md  跨境电商AI选品系统PMS—任务清单.md  跨境电商AI选品系统PMS—企业级设计方案.md  跨境电商AI选品系统PMS—分层架构与数据流协作.md  (+20 more)
_archive/: 20260411任务清单.md  20260411企业级验收标准.md  20260411差异文档.md  2026041401任务分解清单-验收标准.md  2026041401任务分解清单.md  20260415问题与优化建议-下一步工作方向V2.md  2026041601任务分解清单-验收标准.md  2026041601任务分解清单.md  20260419003本地环境安装部署过程.md  20260419003本期安装部署问题.md  2026041901下一步项目方案.md  2026041901下一步项目计划.md  2026041902下一步项目任务清单-验收标准.md  2026041902下一步项目任务清单.md  2026041902下一步项目方案.md  2026041902下一步项目计划.md  20260419下一步项目方案.md  20260419下一步项目计划.md  20260419现有项目下一步优化处理意见.md  任务执行路线图.md  本地环境准备-详解安装部署使用.md  项目现状与设计方案差异分析报告（基于20260412）.md
alembic/: env.py
docs/: integration_test_report.md  runbook_oncall_sla_change.md  测试用例演示报告.json
env/: ecs-compose.shared.example  windows-dev.shared.example  wsl-compose.shared.example
frontend/: index.html  middleware.ts  package-lock.json  package.json  playwright.config.ts
k8s/: agent-service.yml  deployment.yml  embedding-service.yml  gpu.yml  helm-values.prod.shared.yaml  llm-service.yml  postgresql.yml  rag-service.yml  redis.yml  storage.yml  triton-embedding.yml  triton-rerank.yml  values.prod.yaml
scripts/: __init__.py  accept_business_default_config_rollback.py  accept_business_default_configs.py  bootstrap_business_scenario_runtime.py  bootstrap_local_crawl_platform.py  bootstrap_local_dify_runtime.py  bootstrap_local_gdelt_signal.py  check_erp_config.py  (+102 more)
(+838 files in other folders)
